<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/covid_19_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/aboutsTitle"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_marginStart="15dp"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="17dp"
                android:padding="5dp"
                android:text="@string/aboutComplany"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/serviceTitle"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginStart="15dp"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/roundicon"
                android:drawablePadding="10dp"
                android:text="@string/serviceOne"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/roundicon"
                android:drawablePadding="10dp"
                android:text="@string/setviceTwo"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/roundicon"
                android:drawablePadding="10dp"
                android:text="@string/serviceThree"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/roundicon"
                android:drawablePadding="10dp"
                android:text="@string/servicefour"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/addressTitle"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginStart="15dp"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="17dp"
                android:padding="5dp"
                android:text="@string/addressCompany"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/google" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <include
        layout="@layout/poweredby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
